objects/BRNSHRK__BrainsharkActivity__c.object
<CustomObject>
    <description>Tracks views and invitations</description>
    <fields>
        <fullName>BRNSHRK__ActivityType__c</fullName>
        <label>ActivityType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invitation</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkPresentation__c</fullName>
        <label>BrainsharkPresentation</label>
        <referenceTo>BRNSHRK__BrainsharkPresentation__c</referenceTo>
        <relationshipName>R00N50000001I5fbEAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkViewKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brainshark View Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__CampaignID__c</fullName>
        <formula>BRNSHRK__RelatedCampaign__c &amp; BRNSHRK__RelatedOpportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001I5fqEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Duration__c</fullName>
        <label>Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCompany__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Custom 01</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom02__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Custom 02</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookCustom03__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Custom 03</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookDept__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Dept</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookFirstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookLastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__GuestbookTitle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guestbook Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__IntegrationKey__c</fullName>
        <label>Related Send/View</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Is_Invitation__c</fullName>
        <formula>IF(ISPICKVAL(BRNSHRK__ActivityType__c,&quot;Invitation&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Invitation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Is_View__c</fullName>
        <formula>IF(ISPICKVAL(BRNSHRK__ActivityType__c,&quot;View&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Lead_Contact_Email__c</fullName>
        <description>Pulls email address from Lead or Contact field in SFDC</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Workflow rules pulls Email address from Lead or Contact.</inlineHelpText>
        <label>Lead/Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N50000001I5fwEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__MemberID__c</fullName>
        <formula>BRNSHRK__Contact__c &amp; BRNSHRK__Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MemberID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__NumberOfSlides__c</fullName>
        <label>Number of Slides</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__OpportunityStage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PercentDurationViewed__c</fullName>
        <formula>IF(BRNSHRK__ViewingTime__c &lt;= 0, 0, if(BRNSHRK__Duration__c&lt;=0,0,if(BRNSHRK__ViewingTime__c / BRNSHRK__Duration__c &gt; 1, 1, BRNSHRK__ViewingTime__c / BRNSHRK__Duration__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Audio Viewed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PercentSlidesViewed__c</fullName>
        <formula>IF (BRNSHRK__SlidesViewed__c &lt;= 0,0, IF (BRNSHRK__NumberOfSlides__c &lt;= 0,0, if(BRNSHRK__SlidesViewed__c / BRNSHRK__NumberOfSlides__c &gt; 1, 1, BRNSHRK__SlidesViewed__c / BRNSHRK__NumberOfSlides__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Slides Viewed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Pid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presentation ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PointsScored__c</fullName>
        <label>Points Scored</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PossiblePoints__c</fullName>
        <label>Possible Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presentation Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__PresFolder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presentation Folder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N50000001I5feEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>R00N50000001I5fkEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00N50000001I5fnEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>R00N50000001I5ftEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N50000001I5fzEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__RelatedSolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipName>R00N50000001I5g6EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SFDC_Company__c</fullName>
        <formula>IF(ISBLANK(BRNSHRK__Contact__r.Account.Name), IF(ISBLANK(BRNSHRK__Lead__r.Company), &quot;&quot;, BRNSHRK__Lead__r.Company), BRNSHRK__Contact__r.Account.Name)</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SFDC_Email__c</fullName>
        <formula>IF(AND(ISBLANK(BRNSHRK__Contact__r.Email), ISBLANK(BRNSHRK__Lead__r.Email)), BRNSHRK__GuestbookEmail__c , IF(ISBLANK(BRNSHRK__Contact__r.Email), BRNSHRK__Lead__r.Email,BRNSHRK__Contact__r.Email))</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SFDC_Phone__c</fullName>
        <formula>IF( BRNSHRK__Contact__c =&quot;&quot; , BRNSHRK__Lead__r.Phone,BRNSHRK__Contact__r.Phone)</formula>
        <inlineHelpText>Formula pulls data from Lead/Contact.</inlineHelpText>
        <label>SFDC: Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SFDC_Title__c</fullName>
        <formula>IF( BRNSHRK__Contact__c =&quot;&quot;,BRNSHRK__Lead__r.Title,BRNSHRK__Contact__r.Title)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the Job Title field from the Lead/Contact record.</inlineHelpText>
        <label>SFDC: Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Score__c</fullName>
        <formula>IF(BRNSHRK__PossiblePoints__c = 0, 0, IF(ISNULL(BRNSHRK__PossiblePoints__c), 0, BRNSHRK__PointsScored__c / BRNSHRK__PossiblePoints__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sender_Role__c</fullName>
        <formula>BRNSHRK__SentBy__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sender Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentBody__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001I5gAEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SentSubject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sent_Body_HTML__c</fullName>
        <description>The HTML formatted body of the sent email.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Body HTML</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sent_Viewed_Date__c</fullName>
        <formula>IF(
  ISBLANK( DATEVALUE ( BRNSHRK__ViewedDateTime__c )),
  DATEVALUE( BRNSHRK__SentDateTime__c ),
  DATEVALUE ( BRNSHRK__ViewedDateTime__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent/Viewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sent_by_Active_User__c</fullName>
        <formula>IF( BRNSHRK__SentBy__r.IsActive = TRUE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent by Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sent_by_Running_User__c</fullName>
        <formula>IF(   BRNSHRK__SentBy__r.Id  =  $User.Id ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent by = Running User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sent_by_is_Logged_in_user__c</fullName>
        <formula>IF(BRNSHRK__SentBy__c= $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent by is Logged in user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SlidesViewed__c</fullName>
        <label>Slides Viewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Sub_Type__c</fullName>
        <label>Type2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion Letter</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Testimonial</fullName>
                </value>
                <value>
                    <fullName>Intro</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__Topic__c</fullName>
        <label>Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__TrackingCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Type__c</fullName>
        <label>Type1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__UserID__c</fullName>
        <formula>BRNSHRK__SentBy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewData__c</fullName>
        <description>Field to hold the JSON string with internal view data.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON View Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressCity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>View IP Address City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressCountry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>View IP Address Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIPAddressRegion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>View IP Address Region</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewIsMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Viewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001I5g9EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Viewed Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Viewed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewerName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Viewer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewingTime__c</fullName>
        <label>Viewing Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Minutes__c</fullName>
        <formula>FLOOR( BRNSHRK__ViewingTime__c / 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Seconds__c</fullName>
        <formula>BRNSHRK__ViewingTime__c  - BRNSHRK__Viewing_Minutes__c * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Viewing_Time_MM_SS__c</fullName>
        <formula>&quot;Minutes:&quot; &amp; Text(BRNSHRK__Viewing_Minutes__c) &amp; &quot; Seconds:&quot; &amp; Text(BRNSHRK__Viewing_Seconds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Time MM:SS</label>
        <type>Text</type>
    </fields>
    <label>Brainshark Activity</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACT-{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>BrainsharkActivity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>